// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-tooltip component should render an icon next to the label text and hide it from screen readers when no alt text is given 1`] = `
<ic-tooltip class="ic-tooltip ic-tooltip-with-icon" label="This is a tooltip with an icon and quite a large label to to show the icon aligns with the first line of text." target="test-button">
  <template shadowrootmode="open">
    <div aria-hidden="false" class="ic-tooltip-container" role="tooltip">
      <div class="ic-tooltip-content">
        <div aria-hidden="true" class="ic-tooltip-icon-container" role="img">
          <slot aria-hidden="true" name="tooltip-icon"></slot>
        </div>
        <ic-typography class="ic-typography-caption">
          <template shadowrootmode="open">
            <slot></slot>
          </template>
          This is a tooltip with an icon and quite a large label to to show the icon aligns with the first line of text.
        </ic-typography>
      </div>
      <div class="ic-tooltip-arrow"></div>
    </div>
    <slot></slot>
  </template>
  <button id="test-button">
    Click
  </button>
  <svg <svg="" fill="currentColor" height="24px" slot="tooltip-icon" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg">
    <path d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"></path>
  </svg>
</ic-tooltip>
`;

exports[`ic-tooltip component should render an icon next to the label text and show it to screen readers when alt text is given 1`] = `
<ic-tooltip class="ic-tooltip ic-tooltip-with-icon" icon-alt-text="an icon" label="This is a tooltip with an icon and quite a large label to to show the icon aligns with the first line of text." target="test-button">
  <template shadowrootmode="open">
    <div aria-hidden="false" class="ic-tooltip-container" role="tooltip">
      <div class="ic-tooltip-content">
        <div aria-hidden="false" aria-label="an icon" class="ic-tooltip-icon-container" role="img">
          <slot aria-hidden="true" name="tooltip-icon"></slot>
        </div>
        <ic-typography class="ic-typography-caption">
          <template shadowrootmode="open">
            <slot></slot>
          </template>
          This is a tooltip with an icon and quite a large label to to show the icon aligns with the first line of text.
        </ic-typography>
      </div>
      <div class="ic-tooltip-arrow"></div>
    </div>
    <slot></slot>
  </template>
  <button id="test-button">
    Click
  </button>
  <svg fill="currentColor" height="24px" slot="tooltip-icon" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg">
    <path d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"></path>
  </svg>
</ic-tooltip>
`;

exports[`ic-tooltip component should render correctly when in a drawer 1`] = `
<ic-tooltip class="ic-tooltip ic-tooltip-in-container" label="tooltip">
  <template shadowrootmode="open">
    <div aria-hidden="false" class="ic-tooltip-container" data-show role="tooltip" style="position: absolute; left: 0; top: 0; margin: 0;">
      <div class="ic-tooltip-content">
        <ic-typography variant="caption">
          tooltip
        </ic-typography>
      </div>
      <div class="ic-tooltip-arrow" style="position: absolute;"></div>
    </div>
    <slot></slot>
  </template>
</ic-tooltip>
`;

exports[`ic-tooltip component should render correctly when on a dialog 1`] = `
<ic-tooltip class="ic-tooltip ic-tooltip-in-container" label="tooltip">
  <template shadowrootmode="open">
    <div aria-hidden="false" class="ic-tooltip-container" data-show role="tooltip" style="position: absolute; left: 0; top: 0; margin: 0;">
      <div class="ic-tooltip-content">
        <ic-typography variant="caption">
          tooltip
        </ic-typography>
      </div>
      <div class="ic-tooltip-arrow" style="position: absolute;"></div>
    </div>
    <slot></slot>
  </template>
</ic-tooltip>
`;

exports[`ic-tooltip component should render with fixed positioning 1`] = `
<ic-tooltip class="ic-tooltip" fixed-positioning="true</ic-tooltip" label="tooltip">
  <template shadowrootmode="open">
    <div aria-hidden="false" class="ic-tooltip-container" role="tooltip">
      <div class="ic-tooltip-content">
        <ic-typography variant="caption">
          tooltip
        </ic-typography>
      </div>
      <div class="ic-tooltip-arrow"></div>
    </div>
    <slot></slot>
  </template>
</ic-tooltip>
`;

exports[`ic-tooltip component should render: ic-tooltip-render 1`] = `
<ic-tooltip class="ic-tooltip" label="tooltip">
  <template shadowrootmode="open">
    <div aria-hidden="false" class="ic-tooltip-container" role="tooltip">
      <div class="ic-tooltip-content">
        <ic-typography variant="caption">
          tooltip
        </ic-typography>
      </div>
      <div class="ic-tooltip-arrow"></div>
    </div>
    <slot></slot>
  </template>
</ic-tooltip>
`;

exports[`ic-tooltip component should test dark theme 1`] = `
<ic-tooltip <="" class="ic-theme-dark ic-tooltip" ic-tooltip="" label="tooltip" theme="dark">
  <template shadowrootmode="open">
    <div aria-hidden="false" class="ic-tooltip-container" role="tooltip">
      <div class="ic-tooltip-content">
        <ic-typography variant="caption">
          tooltip
        </ic-typography>
      </div>
      <div class="ic-tooltip-arrow"></div>
    </div>
    <slot></slot>
  </template>
</ic-tooltip>
`;

exports[`ic-tooltip component should test light theme 1`] = `
<ic-tooltip <="" class="ic-theme-light ic-tooltip" ic-tooltip="" label="tooltip" theme="light">
  <template shadowrootmode="open">
    <div aria-hidden="false" class="ic-tooltip-container" role="tooltip">
      <div class="ic-tooltip-content">
        <ic-typography variant="caption">
          tooltip
        </ic-typography>
      </div>
      <div class="ic-tooltip-arrow"></div>
    </div>
    <slot></slot>
  </template>
</ic-tooltip>
`;

exports[`ic-tooltip component should truncate text and pass the maxLines value to ic-typography if maxLines prop has been set 1`] = `
<ic-tooltip class="ic-tooltip" label="This is a body of text that is truncated to three lines within a tooltip. It has been truncated based on the max-lines property. The number of lines in the text is clamped to the number passed through the max-lines property." max-lines="2" target="test-button">
  <template shadowrootmode="open">
    <div aria-hidden="false" class="ic-tooltip-container" role="tooltip">
      <div class="ic-tooltip-content">
        <ic-typography class="ic-typography-caption">
          <template shadowrootmode="open">
            <div class="trunc-wrapper">
              <slot></slot>
            </div>
          </template>
          This is a body of text that is truncated to three lines within a tooltip. It has been truncated based on the max-lines property. The number of lines in the text is clamped to the number passed through the max-lines property.
          <span style="visibility: hidden;"></span>
        </ic-typography>
      </div>
      <div class="ic-tooltip-arrow"></div>
    </div>
    <slot></slot>
  </template>
  <button id="test-button">
    Click
  </button>
</ic-tooltip>
`;
